src/objects/Gradebook_Entry__c.object
<CustomObject>
    <description>Individual grades by grading period and class will be recorded here. NOTE: Leaving name as Text because I imagine we will want to auto name these something simliar to the way HEDA names households, etc. Class-Student-GradingPeriod</description>
    <fields>
        <fullName>Attempted_Credits__c</fullName>
        <description>The number of credits attempted for this course</description>
        <label>Attempted Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Connection__c</fullName>
        <description>The course in which this student is enrolled and receiving a grade.</description>
        <label>Course Connection</label>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Gradebook Entries</relationshipLabel>
        <relationshipName>Gradebook_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Earned_Credits__c</fullName>
        <description>The number of credits earned in this course</description>
        <label>Earned Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_Grade__c</fullName>
        <description>The letter representation of the grade received by the student for this class in the current term. Allows for &quot;B+&quot; or even &quot;Exceeds Expectations&quot;</description>
        <label>Letter Grade</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numerical_Grade__c</fullName>
        <description>The numerical representation of the grade received by the student for this class in the current term.</description>
        <label>Numerical Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Indicated whether the student has passed or failed the given course for the current term. Perhaps only applicable at the semesters.</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>The term for which this grade is being recorded (e.g 1st Quarter, or Spring Semester, etc)</description>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Gradebook Entries</relationshipLabel>
        <relationshipName>Gradebook_Entries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Ideally we can inspect the Term in which the grade is being recorded and determine this value, but that assumes automation. However, since we allow code to be enabled/disable, this leaves the option for customers to choose their own path. In addition, type of &quot;Semester&quot; would indicate this is a Transcript made of up individual grading periods, averaged together of a &quot;Final&quot; or &quot;Mid Term&quot; score.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grading Period</fullName>
                </value>
                <value>
                    <fullName>Semester</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Gradebook Entry</label>
    <nameField>
        <label>Gradebook Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gradebook Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>